// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files 1`] = `
Array [
  "endpoints.ts",
  "index.ts",
  "message-dto.form-group-fac.ts",
  "message-dto.model.ts",
  "message-dto.properties.ts",
  "recipient.form-group-fac.ts",
  "recipient.model.ts",
  "recipient.properties.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  sms = '/api/v1/Sms.{format}',
}
export interface IEndpoints {
  readonly sms: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './message-dto.form-group-fac';
export * from './message-dto.model';
export * from './message-dto.properties';
export * from './recipient.form-group-fac';
export * from './recipient.model';
export * from './recipient.properties';
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function MessageDtoFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(null),
    body: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    recipients: new FormArray([], { validators: Validators.required } ),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IRecipient } from './recipient.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IMessageDto {
  id?: string;
  body?: string;
  recipients?: IRecipient[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: message-dto.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum MessageDtoProperties {
  ID = 'id',
  BODY = 'body',
  RECIPIENTS = 'recipients',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function RecipientFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(null),
    ultiId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(null),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    cellPhone1: new FormControl<string | null>(null),
    homePhone1: new FormControl<string | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IRecipient {
  id?: string;
  ultiId?: string;
  firstName?: string;
  middleName?: string;
  lastName?: string;
  cellPhone1?: string;
  homePhone1?: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Messaging Service should generate files: recipient.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum RecipientProperties {
  ID = 'id',
  ULTI_ID = 'ultiId',
  FIRST_NAME = 'firstName',
  MIDDLE_NAME = 'middleName',
  LAST_NAME = 'lastName',
  CELL_PHONE_1 = 'cellPhone1',
  HOME_PHONE_1 = 'homePhone1',
}
"
`;
